--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   flutter_riverpod: ^2.4.9
+  hooks_riverpod: ^2.4.9
   go_router: ^12.1.3
   flutter_hooks: ^0.20.3
   flutter_animate: ^4.2.0+1
