Add Firebase Cloud Functions setup and email verification
- Add Cloud Functions for email verification via SendGrid
- Add Firebase configuration files and setup guides
- Update iOS and Android build configurations
- Add deployment and troubleshooting documentation
- Configure staging and production environments

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.comnecter.mobile.staging</string>
+	<string>com.comnecter.mobile.production</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -47,6 +47,12 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+		<string>location</string>
+	</array>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>This app needs access to location to detect nearby users.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
