feat: Implement Terms of Service and Privacy Policy reading requirement
- Created comprehensive Terms of Service and Privacy Policy markdown files
- Added legal documents service to load markdown files from assets
- Created full-screen document viewer with markdown formatting support
- Rebuilt terms and privacy step in signup screens with independent checkboxes
- Users must read each document before agreeing (checkboxes enable independently)
- Updated settings screen to use shared legal documents dialog
- Documents are only marked as read when full document is opened and closed
- Improved UI with clear read buttons and visual indicators
- Added proper validation requiring both documents to be read and agreed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
     - assets/sounds/
     - assets/images/
     - assets/icons/
+    - assets/legal/
 
 # Launcher Icons Configuration
 flutter_launcher_icons:
